Revert "fix(form-field): ie fixes: apply vertical alignment on select, tree-select;"
This reverts commit 7c2c53f6343148e870d33f65509971e8a4cebbcc.

--- a/packages/mosaic/select/select.scss
+++ b/packages/mosaic/select/select.scss
@@ -19,8 +19,6 @@ $mc-select-placeholder-arrow-space: 2 * ($mc-select-arrow-size + $mc-select-arro
 
     display: inline-block;
 
-    // Fix IE aligning - default align in IE is baseline, not the middle of element
-    vertical-align: top;
     width: 100%;
 
     outline: none;
